--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="format-detection" content="telephone=no">
     <!-- smartphone meta-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no, user-scalable=0">
     <!-- ogp-->
     <meta property="og:type" content="website">
     <meta property="og:title" content="atsuhan-webpack-starter">
@@ -21,10 +21,10 @@
     <meta property="twitter:description" content="atsuhan-webpack-starter">
     <!-- stylesheet-->
     <link rel="stylesheet" href="/style.css">
-    <!-- javascript-->
-    <script type="text/javascript" src="/script.js" defer></script>
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
+    <!-- javascript-->
+    <script type="text/javascript" src="/script.js" defer></script>
   </body>
 </html>
