feat : update neckrace effect

--- a/public/deepar/moripearl/index.html
+++ b/public/deepar/moripearl/index.html
@@ -31,14 +31,9 @@
       <div class="swiper">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/samples/galaxy.png"></div>
-            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/samples/aviators.png"></div>
-            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/samples/beard.png"></div>
-            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/samples/dalmatian.png"></div>
-            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/samples/flowers.png"></div>
-            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/samples/koala.png"></div>
-            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/samples/lion.png"></div>
-            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/samples/teddy_cigar.png"></div>
+            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/moripearl/earring.png"></div>
+            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/moripearl/earring.png"></div>
+            <div class="swiper-slide"><img class="swiper-slide-thumb" src="/img/deepar/moripearl/neckrace.png"></div>
           </div>
         </div>
         <div class="swiper-pagination"></div>
@@ -47,6 +42,6 @@
     <!-- javascript-->
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script type="text/javascript" src="/lib/deepar/deepar.js"></script>
-    <script type="text/javascript" src="/deepar/script.js"></script>
+    <script type="text/javascript" src="/deepar/moripearl/script.js"></script>
   </body>
 </html>
