feat : add firebase key

--- a/public/clmtrackr/index.html
+++ b/public/clmtrackr/index.html
@@ -23,6 +23,9 @@
     <link rel="stylesheet" href="/clmtrackr/style.css">
   </head>
   <body>
+    <script src="/__/firebase/8.1.1/firebase-app.js"></script>
+    <script src="/__/firebase/8.1.1/firebase-analytics.js"></script>
+    <script src="/__/firebase/init.js"></script>
     <video id="video" autoplay></video>
     <canvas id="canvas"></canvas>
     <!-- javascript-->
