--- a/public/deepar/moripearl/index.html
+++ b/public/deepar/moripearl/index.html
@@ -24,6 +24,9 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
   </head>
   <body>
+    <script src="/__/firebase/8.1.1/firebase-app.js"></script>
+    <script src="/__/firebase/8.1.1/firebase-analytics.js"></script>
+    <script src="/__/firebase/init.js"></script>
     <canvas class="deepar" id="deepar-canvas" oncontextmenu="event.preventDefault()"></canvas>
     <div id="loader-wrapper"><span class="loader"></span></div>
     <!-- Carousel-->
