feat : update neckrace position

--- a/public/deepar/moripearl/index.html
+++ b/public/deepar/moripearl/index.html
@@ -20,7 +20,7 @@
     <meta property="twitter:title" content="DeepAR | atsuhan-webpack-starter">
     <meta property="twitter:description" content="atsuhan-webpack-starter">
     <!-- stylesheet-->
-    <link rel="stylesheet" href="/deepar/style.css">
+    <link rel="stylesheet" href="/deepar/moripearl/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
   </head>
   <body>
